--- a/AutoRest/Generators/Java/Java.Tests/build.gradle
+++ b/AutoRest/Generators/Java/Java.Tests/build.gradle
@@ -25,9 +25,9 @@ repositories {
 
 dependencies {
     compile 'commons-codec:commons-codec:1.10'
+    compile 'com.squareup.okhttp:okhttp:2.3.0'
     compile 'com.microsoft.rest:client-runtime:0.0.1-SNAPSHOT'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
-    compile 'com.squareup.okhttp:okhttp:2.4.0'
     compile 'joda-time:joda-time:2.8.2'
     compile 'javax.validation:validation-api:1.1.0.Final'
     testCompile 'junit:junit:4.11'
@@ -90,7 +90,7 @@ task buildRuntime(type: Exec) {
 }
 
 task npmrestore(type: Exec) {
-    workingDir "${projectDir}/../../../NuGetTests/server"
+    workingDir "${projectDir}/../../../TestServer/server"
     commandLine 'cmd', '/c', 'npm', 'install'
 }
 
@@ -99,7 +99,7 @@ task installforever(type: Exec, dependsOn: 'npmrestore') {
 }
 
 task runserver(type: Exec, dependsOn: 'installforever') {
-    workingDir "${projectDir}/../../../NuGetTests/server"
+    workingDir "${projectDir}/../../../TestServer/server"
     commandLine 'cmd', '/c', 'forever', 'start', 'startup/www.js'
 }
 
@@ -109,7 +109,7 @@ task testcoverage(type: JavaExec, dependsOn: 'runserver') {
 }
 
 task stopserver(type: Exec, dependsOn: 'testcoverage') {
-    workingDir "${projectDir}/../../../NuGetTests/server"
+    workingDir "${projectDir}/../../../TestServer/server"
     commandLine 'cmd', '/c', 'forever', 'stop', 'startup/www.js'
 }
 
