Add java infra for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
+sudo: required
 language: csharp
 mono:
   - nightly
 before_script:
+  - sudo apt-get install default-jdk
+  - sudo apt-get install gradle
   - npm install -g npm@'>=1.4.3'
   - npm install
   - rvm use 2.2.1 --install --binary --fuzzy
