--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ language: csharp
 mono:
   - nightly
 before_script:
+  - sudo add-apt-repository ppa:cwchien/gradle -y
+  - sudo apt-get update
   - sudo apt-get install default-jdk
   - sudo apt-get install gradle
   - npm install -g npm@'>=1.4.3'
