--- a/ClientRuntimes/Java/build.gradle
+++ b/ClientRuntimes/Java/build.gradle
@@ -12,6 +12,7 @@ apply plugin: 'com.bmuschko.nexus'
 
 group = 'com.microsoft.rest'
 version = '0.0.1-SNAPSHOT'
+sourceCompatibility = 1.6
 
 repositories {
     mavenCentral()
