--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,11 @@
+sudo: required
 language: csharp
 mono:
   - nightly
 before_script:
-  - npm -v
-  - add-apt-repository ppa:cwchien/gradle -y
-  - apt-get update
-  - apt-get install default-jdk
-  - apt-get install gradle
-  - npm install -g npm@'>=1.4.3'
+  - sudo add-apt-repository ppa:cwchien/gradle -y
+  - sodo apt-get update
+  - sudo apt-get install gradle
   - npm install
   - rvm use 2.2.1 --install --binary --fuzzy
   - gem install bundler
