Fix travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,14 @@
-sudo: required
 language: csharp
 mono:
   - nightly
 before_script:
-  - sudo add-apt-repository ppa:cwchien/gradle -y
-  - sudo apt-get update
-  - sudo apt-get install default-jdk
-  - sudo apt-get install gradle
   - npm install -g npm@'>=1.4.3'
   - npm install
   - rvm use 2.2.1 --install --binary --fuzzy
   - gem install bundler
   - bundle install
+  - wget https://services.gradle.org/distributions/gradle-2.6-bin.zip
+  - unzip gradle-2.6-bin.zip
+  - PATH=$PATH:$(pwd)/gradle-2.6/bin
 script:
   - gulp
