Added Azure clientruntime tests and hooked up gradle files.

--- a/AutoRest/Generators/Java/Azure.Java.Tests/build.gradle
+++ b/AutoRest/Generators/Java/Azure.Java.Tests/build.gradle
@@ -20,13 +20,15 @@ tasks.withType(JavaCompile) {
 repositories {
     mavenCentral()
     maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
-    maven { url "../../../../ClientRuntimes/Java/build/repo-snapshots/"}
+    maven { url "../../../../ClientRuntimes/Java/client-runtime/build/repo-snapshots/"}
+    maven { url "../../../../ClientRuntimes/Java/azure-client-runtime/build/repo-snapshots/"}
 }
 
 dependencies {
     compile 'commons-codec:commons-codec:1.10'
     compile 'com.squareup.okhttp:okhttp:2.3.0'
     compile 'com.microsoft.rest:client-runtime:0.0.1-SNAPSHOT'
+    compile 'com.microsoft.rest:azure-client-runtime:0.0.1-SNAPSHOT'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'joda-time:joda-time:2.8.2'
     compile 'javax.validation:validation-api:1.1.0.Final'
@@ -82,7 +84,7 @@ javadoc {
 
 test {
     reports.getHtml()
-    reports.html.destination = file("${projectDir}/../../../../TestResults/JavaCodeGen")
+    reports.html.destination = file("${projectDir}/../../../../TestResults/JavaAzureCodeGen")
 }
 
 task buildRuntime(type: Exec) {
@@ -121,7 +123,7 @@ task runserver(type: Exec, dependsOn: 'installforever') {
 }
 
 task testcoverage(type: JavaExec, dependsOn: 'runserver') {
-    main = 'fixtures.report.CoverageReporter'
+    main = 'fixtures.azurereport.CoverageReporter'
     classpath = sourceSets.test.runtimeClasspath
 }
 
