--- a/ClientRuntimes/Java/azure-client-runtime/build.gradle
+++ b/ClientRuntimes/Java/azure-client-runtime/build.gradle
@@ -16,15 +16,11 @@ version = '0.0.1-SNAPSHOT'
 repositories {
     mavenCentral()
     maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+    maven { url "../client-runtime/build/repo-snapshots/"}
 }
 
 dependencies {
-    compile 'org.apache.commons:commons-lang3:3.4'
-    compile 'commons-codec:commons-codec:1.10'
-    compile 'com.squareup.retrofit:retrofit:1.9.0'
-    compile 'com.squareup.okhttp:okhttp:2.3.0'
-    compile 'com.squareup.retrofit:converter-jackson:1.9.0'
-    compile 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.1.1'
+    compile 'com.microsoft.rest:client-runtime:0.0.1-SNAPSHOT'
     testCompile 'junit:junit:4.11'
     testCompile 'junit:junit-dep:4.11'
 }
