ignore dnx installation

--- a/.gitignore
+++ b/.gitignore
@@ -170,3 +170,7 @@ Thumbs.db
 .nuget/
 AutoRest/Generators/Ruby/*Tests/Gemfile.lock
 AutoRest/Generators/Ruby/*/RspecTests/Generated/*
+
+#dnx installation
+dnx-clr-win-x86*/
+dnx-coreclr-win-x86*/
