--- a/AutoRest/Generators/NodeJS/Azure.NodeJS.Tests/AutoRest.Generator.Azure.NodeJS.Tests.csproj
+++ b/AutoRest/Generators/NodeJS/Azure.NodeJS.Tests/AutoRest.Generator.Azure.NodeJS.Tests.csproj
@@ -88,6 +88,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="Swagger\body-integer.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="Swagger\storage.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
