Avoid including duplicate copies of generate cs files
 - Update the csproj's to copy as a target instead of using the <None> tag

--- a/AutoRest/Generators/CSharp/Azure.CSharp.Tests/AutoRest.Generator.Azure.CSharp.Tests.csproj
+++ b/AutoRest/Generators/CSharp/Azure.CSharp.Tests/AutoRest.Generator.Azure.CSharp.Tests.csproj
@@ -84,10 +84,14 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="app.config" />
-    <None Include="Expected\**\*.cs">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
+  <Target Name="CopyExpectedFiles" AfterTargets="BeforeBuild">
+    <ItemGroup>
+      <None Include="Expected\**\*.cs">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+  </Target>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
