--- a/ClientRuntimes/Java/client-runtime/build.gradle
+++ b/ClientRuntimes/Java/client-runtime/build.gradle
@@ -4,11 +4,13 @@ buildscript {
     }
     dependencies {
         classpath 'com.bmuschko:gradle-nexus-plugin:2.3.1'
+        classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.2'
     }
 }
 
 apply plugin: 'java'
 apply plugin: 'com.bmuschko.nexus'
+apply plugin: 'com.github.johnrengelman.shadow'
 
 group = 'com.microsoft.rest'
 version = '0.0.1-SNAPSHOT'
