--- a/ClientRuntimes/NodeJS/ms-rest/package.json
+++ b/ClientRuntimes/NodeJS/ms-rest/package.json
@@ -10,6 +10,7 @@
   "tags": ["node", "microsoft", "autorest", "clientruntime"],
   "keywords": ["node", "microsoft", "autorest", "clientruntime"],
   "main": "./lib/msRest.js",
+  "typings": "./lib/index.d.ts",
   "engines": {
     "node": ">= 0.6.15"
   },
