--- a/AutoRest/Generators/CSharp/Azure.CSharp.Tests/AutoRest.Generator.Azure.CSharp.Tests.csproj
+++ b/AutoRest/Generators/CSharp/Azure.CSharp.Tests/AutoRest.Generator.Azure.CSharp.Tests.csproj
@@ -92,8 +92,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Expected\**\*.cs"/>
+    <Compile Include="Expected\**\*.cs" />
     <Compile Include="CSharpAzureCodeNamingFrameworkTests.cs" />
+    <Compile Include="PageJsonTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AcceptanceTests.cs" />
     <Compile Include="GlobalSuppressions.cs" />
