--- a/ClientRuntimes/CSharp/ClientRuntime/Microsoft.Rest.ClientRuntime/project.json
+++ b/ClientRuntimes/CSharp/ClientRuntime/Microsoft.Rest.ClientRuntime/project.json
@@ -19,7 +19,8 @@
                 "System.Net.Http": "4.0.1-beta-23225",
                 "System.Threading.Tasks": "4.0.11-beta-23225",
                 "Microsoft.CSharp": "4.0.1-beta-23225",
-                "Newtonsoft.Json": "6.0.8"
+                "Newtonsoft.Json": "6.0.8",
+                "System.Xml.ReaderWriter": "4.0.10"
             }
         }
     },
