--- a/ClientRuntimes/CSharp/ClientRuntime.Azure/Microsoft.Rest.ClientRuntime.Azure.nuspec
+++ b/ClientRuntimes/CSharp/ClientRuntime.Azure/Microsoft.Rest.ClientRuntime.Azure.nuspec
@@ -47,5 +47,8 @@
     <file src="binaries/net45/Microsoft.Rest.ClientRuntime.Azure.dll" target="lib/net45"/>
     <file src="binaries/net45/Microsoft.Rest.ClientRuntime.Azure.pdb" target="lib/net45"/>
     <file src="binaries/net45/Microsoft.Rest.ClientRuntime.Azure.xml" target="lib/net45"/>
+    <file src="binaries/dnxcore50/Microsoft.Rest.ClientRuntime.Azure.dll" target="lib/dnxcore50"/>
+    <file src="binaries/dnxcore50/Microsoft.Rest.ClientRuntime.Azure.pdb" target="lib/dnxcore50"/>
+    <file src="binaries/dnxcore50/Microsoft.Rest.ClientRuntime.Azure.xml" target="lib/dnxcore50"/>
   </files>
 </package>
