--- a/ClientRuntimes/CSharp/ClientRuntime/Microsoft.Rest.ClientRuntime.nuspec
+++ b/ClientRuntimes/CSharp/ClientRuntime/Microsoft.Rest.ClientRuntime.nuspec
@@ -54,7 +54,8 @@
     <file src="binaries/net45/Microsoft.Rest.ClientRuntime.pdb" target="lib/net45"/>
     <file src="binaries/net45/Microsoft.Rest.ClientRuntime.xml" target="lib/net45"/>
     <file src="binaries/dnxcore50/Microsoft.Rest.ClientRuntime.dll" target="lib/dnxcore50"/>
-    <file src="binaries/dnxcore50/Microsoft.Rest.ClientRuntime.pdb" target="lib/dnxcore50"/>
+    <!-- Commented out to work on Unix -->
+    <!--<file src="binaries/dnxcore50/Microsoft.Rest.ClientRuntime.pdb" target="lib/dnxcore50"/>-->
     <file src="binaries/dnxcore50/Microsoft.Rest.ClientRuntime.xml" target="lib/dnxcore50"/>
   </files>
 </package>
