Hand-write AutoRestLongRunningOperationTestService

--- a/AutoRest/Generators/Java/Azure.Java/AutoRest.Generator.Azure.Java.csproj
+++ b/AutoRest/Generators/Java/Azure.Java/AutoRest.Generator.Azure.Java.csproj
@@ -35,6 +35,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Templates\AzureMethodTemplate.cs">
+      <DependentUpon>AzureMethodTemplate.cshtml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\AutoRest.Core\AutoRest.Core.csproj">
@@ -60,6 +63,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Templates\AzureMethodTemplate.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
