Switched to DOTNET target and bumped up version of Client Runtime

--- a/ClientRuntimes/CSharp/ClientRuntime.Azure/Microsoft.Rest.ClientRuntime.Azure/project.json
+++ b/ClientRuntimes/CSharp/ClientRuntime.Azure/Microsoft.Rest.ClientRuntime.Azure/project.json
@@ -25,9 +25,6 @@
             }
         }
     },
-    "compile": [
-      "../*.cs",
-      "../OData/*.cs",
-      "../Properties/*.cs"
-    ]
+    "compile": ["../**/*.cs"],
+    "resource": ["../Properties/*.resx"]
 }
