--- a/ClientRuntimes/CSharp/ClientRuntime.Azure/Microsoft.Rest.ClientRuntime.Azure.nuspec
+++ b/ClientRuntimes/CSharp/ClientRuntime.Azure/Microsoft.Rest.ClientRuntime.Azure.nuspec
@@ -24,14 +24,6 @@
     <frameworkAssemblies>
       <frameworkAssembly assemblyName="System.Runtime.Serialization" targetFramework="net45"/>
     </frameworkAssemblies>
-    <references>
-      <group targetFramework="portable-net45+win8+wpa81">
-        <reference file="Microsoft.Rest.ClientRuntime.Azure.dll"/>
-      </group>
-      <group targetFramework="net45">
-        <reference file="Microsoft.Rest.ClientRuntime.Azure.dll"/>
-      </group>
-    </references>
     <dependencies>
       <group>
         <dependency id="Microsoft.Rest.ClientRuntime" version="[__VERSION_Microsoft.Rest.ClientRuntime__,2)"/>
@@ -47,9 +39,8 @@
     <file src="binaries/net45/Microsoft.Rest.ClientRuntime.Azure.dll" target="lib/net45"/>
     <file src="binaries/net45/Microsoft.Rest.ClientRuntime.Azure.pdb" target="lib/net45"/>
     <file src="binaries/net45/Microsoft.Rest.ClientRuntime.Azure.xml" target="lib/net45"/>
-    <file src="binaries/dnxcore50/Microsoft.Rest.ClientRuntime.Azure.dll" target="lib/dnxcore50"/>
-    <!-- Commented out to work on Unix -->
-    <!-- <file src="binaries/dnxcore50/Microsoft.Rest.ClientRuntime.Azure.pdb" target="lib/dnxcore50"/> -->
-    <file src="binaries/dnxcore50/Microsoft.Rest.ClientRuntime.Azure.xml" target="lib/dnxcore50"/>
+    <file src="binaries/portable/Microsoft.Rest.ClientRuntime.Azure.dll" target="lib/dotnet"/>
+    <file src="binaries/portable/Microsoft.Rest.ClientRuntime.Azure.pdb" target="lib/dotnet"/>
+    <file src="binaries/portable/Microsoft.Rest.ClientRuntime.Azure.xml" target="lib/dotnet"/>
   </files>
 </package>
