Upgraded Newtownsoft.Json to 6.0.8

--- a/ClientRuntimes/CSharp/ClientRuntime.Azure/Microsoft.Rest.ClientRuntime.Azure/project.json
+++ b/ClientRuntimes/CSharp/ClientRuntime.Azure/Microsoft.Rest.ClientRuntime.Azure/project.json
@@ -25,6 +25,10 @@
             }
         }
     },
-    "compile": ["../**/*.cs"],
+     "compile": [
+        "../*.cs",
+        "../OData/*.cs",
+        "../Properties/*.cs"
+    ],
     "resource": ["../Properties/*.resx"]
 }
