--- a/ClientRuntimes/CSharp/ClientRuntime/Microsoft.Rest.ClientRuntime/project.json
+++ b/ClientRuntimes/CSharp/ClientRuntime/Microsoft.Rest.ClientRuntime/project.json
@@ -24,6 +24,11 @@
             }
         }
     },
-    "compile": ["../**/*.cs"],
+    "compile": [
+        "../*.cs",
+        "../Serialization/*.cs",
+        "../TransientFaultHandling/*.cs",
+        "../Properties/*.cs"
+    ],
     "resource": ["../Properties/*.resx"]
 }
