Removed dependency on BCL Async and Http

--- a/ClientRuntimes/CSharp/ClientRuntime.Azure/Microsoft.Rest.ClientRuntime.Azure.nuspec
+++ b/ClientRuntimes/CSharp/ClientRuntime.Azure/Microsoft.Rest.ClientRuntime.Azure.nuspec
@@ -18,6 +18,7 @@
       -   .NET Framework 4.5
       -   Windows 8
       -   Windows Phone 8.1
+      -   DotNet Core
     </description>
     <copyright>Copyright (c) Microsoft Corporation</copyright>
     <tags>Microsoft "Microsoft Azure" Azure REST azureofficial</tags>
