--- a/AutoRest/Generators/NodeJS/NodeJS.Tests/AutoRest.Generator.NodeJS.Tests.csproj
+++ b/AutoRest/Generators/NodeJS/NodeJS.Tests/AutoRest.Generator.NodeJS.Tests.csproj
@@ -99,5 +99,16 @@
     <Content Include="AcceptanceTests\startServer.js" />
     <Content Include="AcceptanceTests\testlist.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Expected\AcceptanceTests\BodyComplex\autoRestComplexTestService.d.ts">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Expected\AcceptanceTests\BodyComplex\models\index.d.ts">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Expected\AcceptanceTests\BodyComplex\operations\index.d.ts">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
